# oxide-mailer

./: .gitignore  Cargo.toml  configuration.yaml
migrations/: 20251130174716_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
